Update GCTestScript.sh